FUNCIONES DE LOGIN TERMINADAS

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -9,15 +9,15 @@
   "test": {
     "username": "postgres",
     "password": "root",
-    "database": "new_ecommerce",
+    "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   },
   "production": {
-    "username": "postgres",
+    "username": "postgress",
     "password": "root",
-    "database": "new_ecommerce",
+    "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   }
 }
