--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "ecommerce_back",
+  "name": "ecommerce_node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "undo": "npx sequelize-cli db:migrate:undo:all",
-    "up": "npx sequelize-cli db:migrate"
+    "dev": "nodemon index.js"
   },
   "author": "rocnail23",
   "license": "ISC",
@@ -16,26 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.1",
-    "standard": "^17.1.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "./node_modules/standard/eslintrc.json"
-    ]
-  },
-  "prettier": {
-    "trailingComma": "none",
-    "semi": false,
-    "singleQuote": true
+    "sequelize-cli": "^6.6.1"
   }
 }
