--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
@@ -26,10 +29,8 @@
     "nodemon": "^3.0.1",
     "sequelize-cli": "^6.6.1",
     "standard": "^17.1.0"
-    
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
   }
-  
 }
