--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PASSWORD=wtgvshchgcrssrgm
 SECRET=SECRET
 PAYPAL_CLIENT_ID=AapK_VyurJbO53ZqJInelhRPNjKmO4sbpAA-jVMaxvdQRVhLLlo4uYM8-7AIMeW0yI8PgI8RRSb9H0er
 PAYPAL_CLIENT_SECRET=EIs1eRojNOXAQQ9lXdgO_ggDXWvZ1v7n4Ojq5L40gZ1sCaQEfvQfwUmjT5lv26XhcX31BJZHBBRSw00r
+GOOGLE_CLIENT_ID=639445221103-j3ctu9dp8umv787q7aqdfv6tpmb3khjq.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
