--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "undo": "npx sequelize-cli db:migrate:undo:all",
-    "up": "npx sequelize-cli db:migrate:undo:all"
+     "migrate": "cd src && npx sequelize-cli db:migrate"
   },
   "author": "rocnail23",
   "license": "ISC",
