--- a/src/config/config.json
+++ b/src/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "ecommerce_db_k0qg_user",
-    "password": "Ga5D2RtxZZsQfdiyahgob8UtqPcLPJ7H",
-    "database": "ecommerce_db_k0qg",
-    "host": "dpg-clg8nlmr45ec73em0kfg-a",
+    "username": "postgres",
+    "password": "dcea31b3CBFFFCAcEb4*5Bgfbg*GEBdC",
+    "database": "railway",
+    "host": "roundhouse.proxy.rlwy.net",
     "dialect": "postgres"
   }
 }
