--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-URI=postgres://postgres:root@127.0.0.1:5432/new_ecommerce
+URI=postgres://ecommerce_db_k0qg_user:Ga5D2RtxZZsQfdiyahgob8UtqPcLPJ7H@dpg-clg8nlmr45ec73em0kfg-a.oregon-postgres.render.com/ecommerce_db_k0qg
 EMAIL=jdanielrojasingles@gmail.com
 PASSWORD=wtgvshchgcrssrgm
 SECRET=SECRET
