--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "ecommerce_db_k0qg_user",
     "password": "dcea31b3CBFFFCAcEb4*5Bgfbg*GEBdC",
-    "database": "railway",
-    "host": "roundhouse.proxy.rlwy.net",
+    "database": "ecommerce_db_k0qg",
+    "host": "dpg-clg8nlmr45ec73em0kfg-a",
     "dialect": "postgres"
   },
   "test": {
