--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "ecommerce_db_k0qg_user",
-    "password": "dcea31b3CBFFFCAcEb4*5Bgfbg*GEBdC",
-    "database": "ecommerce_db_k0qg",
-    "host": "dpg-clg8nlmr45ec73em0kfg-a",
+    "username": "koyeb-adm",
+    "password": "jRPsM1TYH7cS",
+    "database": "koyebdb",
+    "host": "ep-summer-silence-56907643.eu-central-1.aws.neon.tech",
     "dialect": "postgres"
   },
   "test": {
